--- a/styles/main.css
+++ b/styles/main.css
@@ -75,12 +75,12 @@ li{
     line-height: 1em;
 }
 
-/* #profile-pic{
+#profile-pic{
     width: 150px;
     height: 150px;
     object-fit: cover;
     border-radius: 50%;
-} */
+}
 
 #email{
     color: var(--mainTextColor);
